--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "root",
-  "private": true,
   "scripts": {
-    "start": "pnpm run build && pnpm run dev",
-    "dev": "turbo run dev",
-    "build": "turbo run build-tsplus-watch --parallel",
+    "dev": "turbo run dev --filter=./apps/solid2",
+    "dev:b": "turbo run build --filter=./apps/*",
+    "dev:s": "turbo run serve --filter=./apps/*",
+    "build": "turbo run build --filter=./packages/* --parallel --no-cache",
     "lint": "turbo run lint",
     "postinstall": "tsplus-install"
   },
   "devDependencies": {
-    "eslint-config-custom": "workspace:*",
     "eslint": "7.32.0",
     "prettier": "^2.5.1",
     "turbo": "latest",
     "vitest": "^0.18.1",
     "@tsplus/installer": "0.0.127",
+    "@types/node": "18.0.6",
     "typescript": "^4.6.3"
   }
 }
