--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,45 +1,30 @@
 {
-  "name": "@rholang/web",
+  "name": "@eff/web",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "dist/index.jsx",
+  "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build-tsplus": "tsc -b",
-    "build-tsplus-watch": "tsc -b --watch ",
-    "serve": "vite preview",
+    "build": "tsc -b",
+    "build-v": "vite build",
+    "build-w": "tsc -b --watch ",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
-    "e2e": "nx e2e",
-    "format": "nx format:write",
-    "format:write": "nx format:write",
-    "format:check": "nx format:check",
-    "update": "nx migrate latest",
-    "workspace-generator": "nx workspace-generator",
-    "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "postinstall": "tsplus-install",
-    "commit": "cz"
+    "e2e": "nx e2e"
   },
+
   "dependencies": {
     "@effect/core": "0.0.7",
-    "@tsplus/stdlib": "0.2.2",
-    "solid-js": "^1.4.7"
+    "@tsplus/stdlib": "0.2.2"
   },
+
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "jsdom": "^20.0.0",
-    "solid-testing-library": "^0.3.0",
-    "vite-plugin-solid": "^2.3.0",
-    "@tsplus/installer": "0.0.127",
+    "vite": "^3.0.0",
     "@types/node": "18.0.6",
     "@typescript-eslint/eslint-plugin": "~5.30.7",
     "@typescript-eslint/parser": "~5.30.7",
     "autoprefixer": "^10.4.7",
-    "c8": "^7.11.3",
-    "cypress": "^10.3.0",
     "eslint": "~8.20.0",
     "eslint-config-next": "12.2.2",
     "eslint-config-prettier": "8.5.0",
@@ -48,32 +33,8 @@
     "eslint-plugin-jsx-a11y": "6.6.0",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.6",
     "ts-node": "~10.9.1",
     "tslib": "^2.4.0",
-    "typescript": "~4.7.4",
-    "vite": "^3.0.2",
-    "vite-plugin-esmodule": "^1.4.1",
-    "vite-plugin-pwa": "^0.12.3",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.18.1"
-  },
-  "packageManager": "yarn@3.2.1",
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "browserslist": {
-    "production": [
-      "last 3 versions",
-      "Chrome >= 90",
-      "Safari >= 13"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "typescript": "~4.7.4"
   }
 }
