--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,13 +34,12 @@
     "noUncheckedIndexedAccess": true,
     "strictNullChecks": true,
     "baseUrl": ".",
-    "target": "ES2020",
+    "target": "ESNEXT",
     "module": "ESNext",
     "incremental": true,
     "removeComments": false,
     "isolatedModules": true,
     "jsx": "preserve",
   },
-  "include": [],
-  "exclude": ["node_modules", "dist", "build"]
+  "exclude": ["node_modules", "dist"]
 }
