--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "root",
   "scripts": {
+    "start": "turbo run start --parallel",
     "dev": "turbo run dev --filter=./apps/solid2",
     "dev:b": "turbo run build --filter=./apps/*",
     "dev:s": "turbo run serve --filter=./apps/*",
