--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,14 @@
 {
   "pipeline": {
+    "start": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**",
+        ".next/**"
+      ]
+    },
     "build": {
       "dependsOn": [
         "^build"
