--- a/turbo.json
+++ b/turbo.json
@@ -31,7 +31,13 @@
       "outputs": []
     },
     "dev": {
-      "cache": false
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**",
+        ".next/**"
+      ]
     }
   }
 }
