--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "scripts": {
     "start": "turbo run start --parallel",
-    "dev": "turbo run dev --filter=./apps/solid2",
+    "dev": "turbo run dev --parallel",
     "dev:b": "turbo run build --filter=./apps/*",
     "dev:s": "turbo run serve --filter=./apps/*",
     "build": "turbo run build --filter=./packages/* --parallel",
