added watch mode

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,8 +6,7 @@
   "typings": "dist/index.d.ts",
   "private": true,
   "scripts": {
-    "dev": "tsc -b --watch",
-    "build": "tsc -b",
+    "build": "tsc -b --watch",
     "build-v": "vite build",
     "build-w": "tsc -b --watch ",
     "test": "nx test",
