--- a/apps/solid2/package.json
+++ b/apps/solid2/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build:v": "vite build",
     "serve": "vite preview"
   },
   "license": "MIT",
