--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "root",
   "scripts": {
-    "start": "turbo run start --parallel",
-    "dev": "turbo run dev --parallel",
+    "start": "turbo run build dev",
     "dev:b": "turbo run build --filter=./apps/*",
     "dev:s": "turbo run serve --filter=./apps/*",
-    "build": "turbo run build --filter=./packages/* --parallel",
     "lint": "turbo run lint",
     "postinstall": "tsplus-install"
   },
